track length of activity

--- a/modules/1-E/day1.tex
+++ b/modules/1-E/day1.tex
@@ -120,7 +120,7 @@ in the system).
   \textbf{inconsistent}.
 \end{fact}
 
-\begin{activity}
+\begin{activity}{0}
   Consider the following graphs representing linear systems of two variables.
   Label each graph with \textbf{consistent with one solution},
   \textbf{consistent with infinitely-many solutions}, or
@@ -135,7 +135,7 @@ in the system).
   \end{multicols}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
   All inconsistent linear systems contain a logical \term{contradiction}.
   Find a contradiction in this system by solving for \(x_1\) in the first
   equation, substituting the resulting expression into the
@@ -146,7 +146,7 @@ in the system).
   \end{align*}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
   Consider the following consistent linear system.
   \begin{align*}
   -x_1+2x_2  &= -3 \\
@@ -199,7 +199,7 @@ in the system).
   other variables in terms of those parameters.
 \end{remark}
 
-\begin{activity}
+\begin{activity}{0}
   Consider the following linear system.
   \begin{alignat*}{5}
     x_1 &\,+\,& 2x_2 &\, \,&     &\,-\,&  x_4 &\,=\,& 3 \\
@@ -320,7 +320,7 @@ in the system).
 %   \]
 % \end{definition}
 %
-% \begin{activity}
+% \begin{activity}{0}
 %   Simplify the following matrix expression. (Subtracting a matrix is the
 %   same as multiplying it by \(-1\) and adding.)
 %   \[
@@ -338,7 +338,7 @@ in the system).
 % \end{activity}
 %
 %
-% \begin{activity}
+% \begin{activity}{0}
 %   Two matrices/vectors are equal if and only if the values at every coordinate
 %   are equal. Show that the following linear system and the following vector
 %   equation must have the same solutions by simplifying the vector equation.
@@ -406,7 +406,7 @@ in the system).
   same solutions.
 \end{definition}
 
-\begin{activity}
+\begin{activity}{0}
   Following are six procedures used to manipulate an augmented matrix.
   Label the procedures that would result in an equivalent augmented
   matrix as \textbf{valid}, and label the procedures that would
@@ -427,7 +427,7 @@ in the system).
   \end{TBLnote}
 \end{activity}
 
-% \begin{activity}
+% \begin{activity}{0}
 %   Use the linear system and its augmented matrix
 %   \begin{multicols}{2}\noindent
 %   \begin{alignat*}{3}
@@ -465,7 +465,7 @@ in the system).
   these operations), we write \(A\sim B\).
 \end{definition}
 
-\begin{activity}
+\begin{activity}{0}
   Show that the following two linear systems:
   \begin{multicols}{2}\noindent
     \begin{alignat*}{4}
@@ -502,7 +502,7 @@ in the system).
   rows are at the bottom of the matrix.
 \end{definition}
 
-\begin{activity}
+\begin{activity}{0}
   Reproduce the steps that manipulated the matrix
   \[
     \begin{bmatrix}[ccc|c]
@@ -543,7 +543,7 @@ in the system).
   and all terms above leading terms are \(0\).
 \end{definition}
 
-\begin{activity}
+\begin{activity}{0}
   Show that the following two linear systems:
   \begin{multicols}{2}\noindent
     \begin{alignat*}{4}
@@ -568,7 +568,7 @@ in the system).
   Then write the solution to the linear system.
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
   Verify that \((x_1,x_2,x_3)=(-2,7,2)\) is a solution to the linear system
     \begin{alignat*}{4}
       3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
@@ -578,7 +578,7 @@ in the system).
   by plugging the solution into each equation.
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
   Reproduce the steps that manipulated the matrix
   \[
     \begin{bmatrix}[ccc|c]
@@ -628,7 +628,7 @@ in the system).
   \end{multicols}
 \end{definition}
 
-\begin{activity}
+\begin{activity}{0}
   Find \(\RREF(A)\) where
   \[A=
     \begin{bmatrix}[cccc|c]
@@ -649,7 +649,7 @@ in the system).
   to the linear system modeled by \(A\).
 \end{definition}
 
-\begin{activity}
+\begin{activity}{0}
   Given the linear system and its equivalent augmented matrices
   \begin{multicols}{2}\noindent
     \begin{alignat*}{5}
@@ -704,7 +704,7 @@ in the system).
   deduce that a linear system is inconsistent.
 \end{remark}
 
-\begin{activity}
+\begin{activity}{0}
   Find the contradiction in the inconsistent linear system
     \begin{alignat*}{4}
       2x_1 &\,-\,& 3x_2 &\,=\,& 17 \\
@@ -737,7 +737,7 @@ in the system).
   \end{alignat*}
 \end{definition}
 
-\begin{activity}
+\begin{activity}{0}
   Prove that all homogeneous systems are consistent.
   (Hint: Find an obvious solution
   \(
@@ -826,7 +826,7 @@ in the system).
   \end{multicols}
 \end{definition}
 
-\begin{activity}
+\begin{activity}{0}
   Find a basis for the solution set of the following homogeneous linear
   system.
   \begin{alignat*}{5}
