--- a/modules/4-A/day2.tex
+++ b/modules/4-A/day2.tex
@@ -11,11 +11,11 @@ Let $T: V \rightarrow W$ be a linear transformation.
 \end{itemize}
 \end{definition}
 
-\begin{activity}
+\begin{activity}{0}
 Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$.  Determine if $T$ is injective, surjective, both, or neither.
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.  Determine if $T$ is injective, surjective, both, or neither.
 \end{activity}
 
@@ -27,15 +27,15 @@ We also have two important sets called the \term{kernel} of $T$ and the \term{im
 \end{align*}
 \end{definition}
 
-\begin{activity}
+\begin{activity}{0}
 Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$ (for the standard basis).  Find the kernel and image of $T$.
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$ (for the standard basis).  Find the kernel and image of $T$.
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
   \begin{subactivity}
     Describe surjective linear transformations in terms of the image.
   \end{subactivity}
@@ -44,7 +44,7 @@ Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $\begin{bmatrix} 1 & 0 &
   \end{subactivity}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the matrix $A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}$ (for the standard basis).
 \begin{enumerate}[1)]
 \item Write a system of equations whose solution set is the kernel.
@@ -54,7 +54,7 @@ Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the matri
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Let $S: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the matrix $B=\begin{bmatrix} 3 & 4 & 1 \\ 1 & 2 & 4 \\ 5 & 8 & 9 \end{bmatrix}$ (for the standard basis).
 \begin{enumerate}[1)]
 \item Write a system of equations whose solution set is the kernel.
@@ -64,7 +64,7 @@ Let $S: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the matri
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Let $T: \IR^3 \rightarrow \IR^3$ be the linear transformation given by the matrix $A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}$ (for the standard basis).
 \begin{enumerate}[1)]
 \item Find a set of vectors that span the image of $T$
@@ -72,7 +72,7 @@ Let $T: \IR^3 \rightarrow \IR^3$ be the linear transformation given by the matri
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Let $S: \IR^3 \rightarrow \IR^3$ be the linear transformation given by the matrix $B=\begin{bmatrix} 3 & 4 & 1 \\ 1 & 2 & 4 \\ 5 & 8 & 9  \end{bmatrix}$ (for the standard basis).
 \begin{enumerate}[1)]
 \item Find a set of vectors that span the image of $T$
