--- a/modules/4-A/day3.tex
+++ b/modules/4-A/day3.tex
@@ -3,7 +3,7 @@
 
 \begin{applicationActivities}{Day 3}
 
-\begin{activity}
+\begin{activity}{0}
 Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (for the standard basis).  You have cards containing a number of statements about $T$ and $A$.  Sort them into groups of equivalent statements, and post them on your board.
 
 \begin{TBLnote}Card sort activity for 10-15 minutes: cards contain the following
@@ -25,12 +25,12 @@ Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (fo
 \end{TBLnote}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 \begin{TBLnote}Gallery walk \end{TBLnote}
 Cycle around the room counter-clockwise.  If they have two things grouped together that you know are not equivalent, write a reason or counter-example on a sticky note.
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Come up with as many statements as you can, and add them to the appropriate group.
 \end{activity}
 
