--- a/modules/6-G/day1.tex
+++ b/modules/6-G/day1.tex
@@ -3,7 +3,7 @@
 
 \begin{applicationActivities}{Days 1-2}
 
-\begin{activity}
+\begin{activity}{0}
 Consider the linear transformation $A : \IR^2 \rightarrow \IR^2$ given by the matrix $A = \begin{bmatrix} 2 & 0 \\ 0 & 3 \end{bmatrix}$
 
 \begin{center}
@@ -27,7 +27,7 @@ We can summarize the transformation of the unit square into this rectangle by me
 \end{activity}
 
 
-\begin{activity}
+\begin{activity}{0}
 Consider the following linear transformations  $A_i: \IR^2 \rightarrow \IR^2$.
 \begin{itemize}
 \item $A_2 = \begin{bmatrix} 2 & 3 \\ 0 & 1 \end{bmatrix}$
@@ -44,7 +44,7 @@ For each linear transformation, do the following:
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Our goal is to define a function $\det:M_n \rightarrow \IR$ that takes a square matrix (linear transformation $\IR^n \rightarrow \IR^n$) and returns its area stretching factor.  This function is called the \term{determinant}.
 
 What properties should this function have?
@@ -119,7 +119,7 @@ Match the four pictures to the following four expressions
 
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 What can you conclude about each of the following?
 \begin{enumerate}
 \item $\det(\vec{e}_1,\vec{e}_2)$
@@ -145,7 +145,7 @@ These three properties uniquely define the \term{determinant}, as we shall see.
 Note that if $\vec{v},\vec{w} \in \IR^2$ and $A=\begin{bmatrix} \vec{v} & \vec{w}\end{bmatrix}$ we will write either $\det(A)$ or $\det(\vec{v},\vec{w})$ as is convenient.
 \end{observation}
 
-\begin{activity}
+\begin{activity}{0}
 \item How are $\det (\vec{v},\vec{w})$ and $\det(\vec{w},\vec{v})$ related?
 \begin{enumerate}[(a)]
 \item $\det(\vec{v},\vec{w}) = \det(\vec{w},\vec{v})$
@@ -160,7 +160,7 @@ Note that if $\vec{v},\vec{w} \in \IR^2$ and $A=\begin{bmatrix} \vec{v} & \vec{w
 Note that this implies that the determinant is actually a \textit{signed} area (volume)!
 \end{observation}
 
-\begin{activity}
+\begin{activity}{0}
 \item How are $\det (\vec{v}+\vec{w},\vec{w})$ and $\det(\vec{v},\vec{w})$ related?
 \begin{enumerate}[(a)]
 \item $\det(\vec{v}+\vec{w},\vec{w}) = \det(\vec{v},\vec{w})$
@@ -174,7 +174,7 @@ Note that this implies that the determinant is actually a \textit{signed} area (
   Note that we now understand the effect of any column operation on the determinant.
 \end{observation}
 
-\begin{activity}
+\begin{activity}{0}
   How are $\det(A)$ and $\det(A^T)$ related?
 \begin{enumerate}[(a)]
 \item $\det(A)=\det(A^T)$
@@ -188,15 +188,15 @@ Note that this implies that the determinant is actually a \textit{signed} area (
   Thus, row operations behave like column operations.  So we can use row reduction to compute determinants.
 \end{observation}
 
-\begin{activity}
+\begin{activity}{0}
   Compute $\det \begin{bmatrix} 4 & 5 \\ 2 & 3 \end{bmatrix}$.
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
   Compute $\det \begin{bmatrix} a & b \\ c & d \end{bmatrix}$
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
   Which of the following is the same as $\det \begin{bmatrix} 3 & -2 & 0 \\  5 & -1 & 0 \\  -2 & 4 & 1\end{bmatrix}$?
 \begin{enumerate}[(a)]
 \item $\det \begin{bmatrix} 3 & -2 \\ 5 & -1 \end{bmatrix}$
@@ -206,7 +206,7 @@ Note that this implies that the determinant is actually a \textit{signed} area (
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
   Which of the following is the same as $\det \begin{bmatrix} 3 & 0 & 7 \\  5 & 1 & 2 \\  -2 & 0 & 6 \end{bmatrix}$?
 \begin{enumerate}[(a)]
 \item $\det \begin{bmatrix} 3 & 7 \\ 5 & 2 \end{bmatrix}$
@@ -216,15 +216,15 @@ Note that this implies that the determinant is actually a \textit{signed} area (
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
   Compute $\det \begin{bmatrix} 0 & 3 & -2 \\ 1 & 5 & 12 \\ 0 & 2 & -1 \end{bmatrix}$
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
    Using the fact that $\begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix} = \begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} + \begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix}$, compute $\det \begin{bmatrix} 1 & 2 & 3 \\ 1 & -2 & 5 \\ 0 & 3 & 3 \end{bmatrix}$.
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
    Compute $\begin{bmatrix} 2 & 3 & 5 & 0 \\ 0 & 1 & -1 & 0 \\ 1 & 2 & 0 & 3 \\ -1 & -1 & 2 & 2 \end{bmatrix}$
 \end{activity}
 
