--- a/modules/6-G/day3.tex
+++ b/modules/6-G/day3.tex
@@ -3,7 +3,7 @@
 
 \begin{applicationActivities}{Day 3}
 
-\begin{activity}
+\begin{activity}{0}
 Consider the linear transformation $A : \IR^2 \rightarrow \IR^2$ given by the matrix $A = \begin{bmatrix} 2 & 2 \\ 0 & 3 \end{bmatrix}$
 
 \begin{center}
@@ -32,15 +32,15 @@ Observe that $A\vec{x}=\lambda \vec{x}$ is equivalent to $(A-\lambda I)\vec{x} =
 \end{itemize}
 \end{observation}
 
-\begin{activity}
+\begin{activity}{0}
 Find the eigenvalues for the matrix $A = \begin{bmatrix} 2 & 2 \\ 0 & 3 \end{bmatrix}$.
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
   Compute the eigenspace associated to the eigenvalue $3$.
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
   Find all the eigenvalues and associated eigenspaces for the matrix $\begin{bmatrix} 6 & -2 & 1 \\ 17 & -5 & 5 \\ -4 & 2 & 1 \end{bmatrix}$.
 \end{activity}
 
