--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -86,8 +86,8 @@ Choose the most appropriate response for each question.
 }
 
 
-\newenvironment{activity}{
-\begin{activityRaw}
+\newenvironment{activity}[1]{
+\begin{activityRaw} \textit{(#1 min)}
 }{
 \end{activityRaw}
 \begin{center}
