--- a/modules/4-A/day1.tex
+++ b/modules/4-A/day1.tex
@@ -14,7 +14,7 @@ In other words, a map is linear if one can do vector space operations before app
 $V$ is called the \term{domain} of $T$ and $W$ is called the \term{co-domain} of $T$.
 \end{definition}
 
-\begin{activity}
+\begin{activity}{0}
 Determine if each of the following maps are linear transformations
 \begin{enumerate}[(a)]
 \item $T_1 : \IR^2 \rightarrow \IR$ given by $T_1\left(\begin{bmatrix} a \\ b \end{bmatrix} \right) = \sqrt{a^2+b^2}$
@@ -25,7 +25,7 @@ Determine if each of the following maps are linear transformations
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Suppose $T: \IR^3 \rightarrow \IR^2$ is a linear transformation, and you know $T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \right) = \begin{bmatrix} 2 \\ 1 \end{bmatrix} $ and $T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix} \right) = \begin{bmatrix} -3 \\ 2 \end{bmatrix} $.  Compute each of the following:
 \begin{enumerate}[(a)]
 \item $T\left(\begin{bmatrix} 3 \\ 0 \\ 0 \end{bmatrix}\right)$
@@ -35,7 +35,7 @@ Suppose $T: \IR^3 \rightarrow \IR^2$ is a linear transformation, and you know $T
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Suppose $T: \IR^4 \rightarrow \IR^3$ is a linear transformation.  What is the smallest number of vectors needed to determine $T$?  In other words, what is the smallest number $n$ such that there are $\vec{v}_1,\ldots,\vec{v}_n \in \IR^4$ and given  $T(\vec{v}_1), \ldots, T(\vec{v}_n)$ you can determine $T(\vec{w})$ for \textit{any} $\vec{w} \in \IR^2$?
 \end{activity}
 
@@ -43,7 +43,7 @@ Suppose $T: \IR^4 \rightarrow \IR^3$ is a linear transformation.  What is the sm
 Fix an ordered basis for $V$.  Since every vector can be written \textit{uniquely} as a linear combination of basis vectors, a linear transformation $T:V \rightarrow W$ corresponds exactly to a choice of where each basis vector goes.  For convenience, we can thus encode a linear transformation as a matrix, with one column for the image of each basis vector (in order).
 \end{observation}
 
-\begin{activity}
+\begin{activity}{0}
 Let $T: \IR^3 \rightarrow \IR^2$ be a linear transformation with
 \begin{align*}
 T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \right) &= \begin{bmatrix} 3 \\ 2\end{bmatrix} &
@@ -53,7 +53,7 @@ T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix} \right) &= \begin{bmatrix} 5 \\
 Write the matrix corresponding to this linear transformation with respect to the standard ordered basis.
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
   Let $T: \IR^3 \rightarrow \IR^2$ be a linear transformation with
 \begin{align*}
 T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \right) &= \begin{bmatrix} 3 \\ 2\end{bmatrix} &
@@ -64,7 +64,7 @@ Write the matrix corresponding to this linear transformation with respect to the
 \[\left\{ \begin{bmatrix} 2 \\ 1 \\ 1 \end{bmatrix} , \begin{bmatrix} -1 \\ -1 \\ 3 \end{bmatrix} , \begin{bmatrix} 0 \\ 1 \\ 2 \end{bmatrix} \right\}\]
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Let $D: \P_3 \rightarrow \P_2$ be the derivative map (recall this is a linear transformation).  Write the matrix corresponding to $D$ with respect to the ordered basis $\{1,x,x^2,x^3\}$.
 \end{activity}
 
