--- a/modules/5-M/day1.tex
+++ b/modules/5-M/day1.tex
@@ -3,7 +3,7 @@
 
 \begin{applicationActivities}{Day 1}
 
-\begin{activity}
+\begin{activity}{0}
 Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
 
 What is the domain of the composition map $S \circ T$?
@@ -15,7 +15,7 @@ What is the domain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 What is the codomain of the composition map $S \circ T$?
 \begin{enumerate}[(a)]
 \item $\IR$
@@ -25,7 +25,7 @@ What is the codomain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \begin{enumerate}[(a)]
 \item $M_{4,3}$
@@ -37,16 +37,16 @@ The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Compute $(S \circ T)(\vec{e}_1)$, $(S \circ T)(\vec{e}_2)$, and
 $(S \circ T)(\vec{e}_3)$.
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Find the matrix corresponding to $S \circ T$ with respect to the standard bases.
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
 
 What is the domain of the composition map $S \circ T$?
@@ -58,7 +58,7 @@ What is the domain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 What is the codomain of the composition map $S \circ T$?
 \begin{enumerate}[(a)]
 \item $\IR$
@@ -68,7 +68,7 @@ What is the codomain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \begin{enumerate}[(a)]
 \item $M_{2,2}$
@@ -78,15 +78,15 @@ The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Compute $(S \circ T)(\vec{e}_1)$ and $(S \circ T)(\vec{e}_2)$
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Find the matrix corresponding to $S \circ T$ with respect to the standard bases.
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Let $T: \IR^1 \rightarrow \IR^4$ be given by the matrix $B=\begin{bmatrix} 3 \\\ -2 \\ 1 \\ -1\end{bmatrix}$ and $S: \IR^4 \rightarrow \IR^1$ be given by the matrix $A=\begin{bmatrix}2 & 3 & 2 & 5 \end{bmatrix}$.
 
 What is the domain of the composition map $S \circ T$?
@@ -98,7 +98,7 @@ What is the domain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 What is the codomain of the composition map $S \circ T$?
 \begin{enumerate}[(a)]
 \item $\IR$
@@ -108,7 +108,7 @@ What is the codomain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \begin{enumerate}[(a)]
 \item $M_{1,1}$
@@ -118,15 +118,15 @@ The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
   Compute $(S \circ T)(\vec{e}_1)$
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
   Find the matrix corresponding to $S \circ T$ with respect to the standard bases.
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Let $A=\begin{bmatrix} 3 & 1 & -1 \\ 2 & 0 & 4 \\ -1 & 3 & 5 \end{bmatrix}$ and $X=\begin{bmatrix} x \\ y \\ z \end{bmatrix}$
 \begin{enumerate}
 \item Compute $AX$
