--- a/modules/5-M/day2.tex
+++ b/modules/5-M/day2.tex
@@ -3,7 +3,7 @@
 
 \begin{applicationActivities}{Day 2}
 
-\begin{activity}
+\begin{activity}{0}
 Each row operation can be interpreted as a matrix multiplication.  Let $A \in M_{4,4}$
 \begin{enumerate}[1)]
 \item Find a matrix $S_1$ such that $S_1A$ is the result of swapping the second and fourth rows of $A$.
@@ -13,7 +13,7 @@ Each row operation can be interpreted as a matrix multiplication.  Let $A \in M_
 \end{activity}
 
 
-\begin{activity}
+\begin{activity}{0}
 Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (for the standard basis).  Consider the following statements about $T$
 \begin{enumerate}[(a)]
 \item $T$ is injective
@@ -33,7 +33,7 @@ Sort these statements into groups of equivalent statements.
 
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (for the standard basis).
 
 If $T$ is injective, what must be true about how $m$ and $n$ are related?
@@ -46,7 +46,7 @@ If $T$ is injective, what must be true about how $m$ and $n$ are related?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
 If $T$ is surjective, what must be true about how $m$ and $n$ are related?
 \begin{enumerate}[(a)]
 \item $m<n$
@@ -57,7 +57,7 @@ If $T$ is surjective, what must be true about how $m$ and $n$ are related?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}
+\begin{activity}{0}
   If $T$ is bijective, what must be true about how $m$ and $n$ are related?
 \begin{enumerate}[(a)]
 \item $m<n$
