--- a/modules/5-M/day3.tex
+++ b/modules/5-M/day3.tex
@@ -3,7 +3,7 @@
 
 \begin{applicationActivities}{Day 3}
 
-\begin{activity}
+\begin{activity}{0}
   Let $T: \IR^n \rightarrow \IR^n$ be a linear map with matrix $A \in M_{n,n}$.
 
   If $T$ is a bijection, then $AX=B$ has a unique solution for all $B \in \IR^n$.  Thus we can define a map $T^{-1} : \IR^n \rightarrow \IR^n$ by defining $T^{-1}(B)$ to be this solution.  It follows immediately that $T \circ T^{-1}$ is the identity map.  The matrix corresponding to $T^{-1}$ is denoted $A^{-1}$.
