split module 1 into three days

--- a/modules/1-E/index.tex
+++ b/modules/1-E/index.tex
@@ -18,4 +18,6 @@
 
 \input{modules/1-E/definitions.tex}
 \input{modules/1-E/readiness.tex}
-\input{modules/1-E/day1.tex} %TODO needs to be split into multiple days
+\input{modules/1-E/day1.tex}
+\input{modules/1-E/day2.tex}
+\input{modules/1-E/day3.tex}
