add day 1 of vector spaces

--- a/course-notes.tex
+++ b/course-notes.tex
@@ -7,7 +7,7 @@
 
 
 \input{modules/1-E/index.tex}
-% \input{modules/4-A/index.tex}
+\input{modules/2-V/index.tex}
 % \input{modules/4-A/index.tex}
 \input{modules/4-A/index.tex}
 \input{modules/5-M/index.tex}
