--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -27,6 +27,8 @@
 \newtheorem*{remark}{Remark}
 \newtheorem*{activityRaw}{Activity}
 
+\newcommand{\vect}{\mathbf}
+
 
 \newenvironment{readinessAssuranceOutcomes}{
 \newpage
