draft of module 2

--- a/modules/1-E/index.tex
+++ b/modules/1-E/index.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\setHeader{Module E: Solving Systems of Linear Equations}
+\begin{module}{Module E: Solving Systems of Linear Equations}
 
 \begin{moduleStandards}
   \item \textbf{E1: Augmented Matrices.}
@@ -21,3 +21,5 @@
 \input{modules/1-E/day1.tex}
 \input{modules/1-E/day2.tex}
 \input{modules/1-E/day3.tex}
+
+\end{module}
