--- a/modules/2-V/day1.tex
+++ b/modules/2-V/day1.tex
@@ -27,12 +27,12 @@ filling in the missing information.
   \item There exists an \textbf{additive identity} for Euclidean vector
         addition.
 
-        \textbf{Proof:} Let \(\vect e=\,?\). Since
-        \(\vect v+\vect e=\,?=\vect v\), \(\vect e\) is an identity. \(\square\)
+        \textbf{Proof:} Let \(\vect 0=\,?\). Since
+        \(\vect v+\vect 0=\,?=\vect v\), \(\vect 0\) is an identity. \(\square\)
   \item Every Euclidean vector has an \textbf{additive inverse}.
 
         \textbf{Proof:} Let \(-\vect v=\,?\). Since
-        \(\vect v+(-\vect v)=\,?=\vect e\), \(-\vect v\) is an inverse
+        \(\vect v+(-\vect v)=\,?=\vect 0\), \(-\vect v\) is an inverse
         for \(\vect v\). \(\square\)
 \end{enumerate}
 \end{activity}
@@ -94,12 +94,12 @@ filling in the missing information.
           \vect v+\vect u\).
     \item \textbf{Additive identity.}
 
-          There exists some \(\vect e\) in \(V\)
-          where \(\vect v+\vect e=\vect v\).
+          There exists some \(\vect 0\) in \(V\)
+          where \(\vect v+\vect 0=\vect v\).
     \item \textbf{Additive identity.}
 
           There exists some \(-\vect v\) in \(V\)
-          where \(\vect v+(-\vect v)=\vect e\).
+          where \(\vect v+(-\vect v)=\vect 0\).
     \item \textbf{Well-defined scalar multipication.}
 
           \(a\vect v\) belongs to
@@ -118,6 +118,11 @@ filling in the missing information.
           \(1\vect v=\vect v\).
   \end{itemize}
   \end{multicols}
+\end{definition}
+
+\begin{definition}
+  The most important examples of vector spaces are the \term{Euclidean
+  vector spaces} \(\IR^n\), but there are other examples as well.
 \end{definition}
 
 \begin{activity}{15}
