--- a/modules/2-V/index.tex
+++ b/modules/2-V/index.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\setHeader{Module V: Vector Spaces}
+\begin{module}{Module V: Vector Spaces}
 
 \begin{moduleStandards}
   \item \textbf{V1: Vector Spaces.}
@@ -13,9 +13,13 @@
         Determine if a subset of a vector space is a subspace.
   \item \textbf{V4: Isomorphisms.}
         Solve an abstract vector space problem by reinterpreting it in
-        terms of an isomorphic subspace of a Euclidean space.
+        terms of an isomorphic Euclidean space.
 \end{moduleStandards}
 
 \input{modules/2-V/definitions.tex}
 \input{modules/2-V/readiness.tex}
 \input{modules/2-V/day1.tex}
+\input{modules/2-V/day2.tex}
+\input{modules/2-V/day3.tex}
+
+\end{module}
