--- a/course-notes.tex
+++ b/course-notes.tex
@@ -8,7 +8,7 @@
 
 \input{modules/1-E/index.tex} % 3 days
 \input{modules/2-V/index.tex} % 3 days
-% \input{modules/4-A/index.tex} % 5 days
+\input{modules/3-R/index.tex} % 5 days
 \input{modules/4-A/index.tex} % 2 days
 \input{modules/5-M/index.tex} % 4 days
 \input{modules/6-G/index.tex} % 4 days
