--- a/modules/3-R/readiness.tex
+++ b/modules/3-R/readiness.tex
@@ -3,17 +3,14 @@
 
 \begin{readinessAssuranceOutcomes}
 \item Add Euclidean vectors and multiply Euclidean vectors by scalars.
-\item Add complex numbers and multiply complex numbers by scalars.
-\item Add polynomials and multiply polynomials by scalars.
 \item Perform basic manipulations of augmented matrices and linear
 systems \standardList{E1,E2,E3}.
+\item Apply linear combinations and spanning sets \standardList{V2}.
 \end{readinessAssuranceOutcomes}
 
 \begin{readinessAssuranceResources}
 \item \url{https://www.khanacademy.org/math/precalculus/vectors-precalc/vector-addition-subtraction/v/adding-and-subtracting-vectors}
 \item \url{https://www.khanacademy.org/math/precalculus/vectors-precalc/combined-vector-operations/v/combined-vector-operations-example}
-\item \url{https://www.khanacademy.org/math/precalculus/imaginary-and-complex-numbers/adding-and-subtracting-complex-numbers/v/adding-complex-numbers}
-\item \url{https://www.khanacademy.org/math/algebra/introduction-to-polynomial-expressions/adding-and-subtracting-polynomials/v/adding-and-subtracting-polynomials-1}
 \end{readinessAssuranceResources}
 
 
@@ -21,7 +18,7 @@ systems \standardList{E1,E2,E3}.
 
 \begin{readinessAssuranceTest}
 
-\item Simplify the following vector expression.
+\item Simplify the following vector expression. (TODO write a new one)
   \[
   2
   \begin{bmatrix}
@@ -55,31 +52,6 @@ systems \standardList{E1,E2,E3}.
           -2 \\ 0 \\ 1
         \end{bmatrix}
       \)
-\end{readinessAssuranceTestChoices}
-\end{multicols}
-
-\item Simplify the complex number expression
-      \(-4(3-2i)+2(5+i)\).
-
-\begin{multicols}{4}
-\begin{readinessAssuranceTestChoices}
-\item \(3-7i\)
-\item \(4+i\)
-\item \(-2+10i\)
-\item \(-1-5i\)
-\end{readinessAssuranceTestChoices}
-\end{multicols}
-
-\item Simplify \(3f(x)-2g(x)\) where
-      \(f(x)=7-x^2\) and
-      \(g(x)=2x^3+x-1\).
-
-\begin{multicols}{4}
-\begin{readinessAssuranceTestChoices}
-\item \(x^3+4x-5\)
-\item \(-4x^3-3x^2-2x+23\)
-\item \(3x^3+5x^2-3x+17\)
-\item \(-x^3+19x^2-4\)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
