--- a/assessment calendar.tex
+++ b/assessment calendar.tex
@@ -6,7 +6,7 @@
 
 \input{class-macros.tex}
 
-
+\newcommand{\RAT}[1]{\ifbool{TBL}{{\bf RAT Module #1} \\}{}}
 
 \begin{document}
 \pagestyle{empty}
@@ -72,12 +72,27 @@
 
 % schedule
 \caltexton{1}{First day--no assessments}
-\caltexton{2}{Readiness Assurance Module E}
+\caltexton{2}{\RAT{E}}
+\caltexton{4}{E.1}
+\caltexton{5}{E.2}
+\caltexton{6}{\RAT{V} E.1,E.2,E.3,E.4}
+\caltexton{7}{E.2}
+\caltexton{8}{ E.1,E.2,E.3,E.4, V.1}
+\caltexton{10}{\RAT{S?} E.1,E.2,E.3,E.4, V.1}
+\caltexton{16}{\bf Midterm Exam}
+\caltexton{17}{\RAT{A}}
 
-\caltexton{16}{Midterm Exam}
-\caltexton{17}{Readiness Assurance Module A}
-
-\caltexton{19}{}
+\caltexton{19}{A.1,A.2}
+\caltexton{20}{A.3,A.4}
+\caltexton{21}{\RAT{M}  A.1,A.2}
+\caltexton{22}{A.3,A.4}
+\caltexton{23}{A.1,A.2,M.1}
+\caltexton{24}{A.3,A.4}
+\caltexton{25}{\RAT{G}  A.1,A.2,M.1,M.2,M.3}
+\caltexton{26}{A.3,A.4}
+\caltexton{27}{M.1,M.2,M.3}
+\caltexton{28}{M.1,M.2,M.3,G.1}
+\caltexton{29}{G.1,G.2,G.3}
 
 
 
