--- a/class-macros.tex
+++ b/class-macros.tex
@@ -10,9 +10,9 @@
 
 \newcommand{\prof}{\ifbool{TR}{Dr. Drew Lewis}{Dr. Steven Clontz}}
 \newcommand{\profemail}{\ifbool{TR}{{\tt drewlewis@southalabama.edu}}{}}
-\newcommand{\profoffice}{\ifbool{TR}{ILB 439}{ILB 3??}}
-\newcommand{\tbltime}{\ifbool{TR}{TR 9:30-10:45 COMM 0160}{MW }}
-\newcommand{\lecturetime}{\ifbool{TR}{TR 12:30-1:45 ILB 350}{MW }}
+\newcommand{\profoffice}{\ifbool{TR}{MSPB (ILB) 439}{MSPB (ILB) 3??}}
+\newcommand{\tbltime}{\ifbool{TR}{TR 9:30-10:45 COMM 0160}{MW COMM 0160}}
+\newcommand{\lecturetime}{\ifbool{TR}{TR 12:30-1:45 MSPB (ILB) 350}{MW  MSPB (ILB) }}
 
 
 \newbool{TBL}
