--- a/syllabus.tex
+++ b/syllabus.tex
@@ -73,8 +73,8 @@ This class is taught by a method called {\bf team-based learning}.  Based on you
 \begin{tabular}{l|l}
 Module & Date \\ \hline \hline 
 Systems of Linear Equations & \ifbool{TR}{August 22}{August 21} \\ \hline
-Vector Spaces & \\ \hline
-Structure of Vector Spaces & \\ \hline
+Vector Spaces &  \ifbool{TR}{September 5}{September 6} \\ \hline
+Structure of Vector Spaces & \ifbool{TR}{September 19}{September 20}\\ \hline
 Algebraic Properties of Linear Maps & \ifbool{TR}{October 17}{October 16} \\ \hline
 Matrix Algebra & \ifbool{TR}{October 31}{October 30} \\ \hline
 Geometric Properties of Linear Maps & \ifbool{TR}{November 14}{November 13} \\ \hline
@@ -110,7 +110,7 @@ This score will help determine your final grade, as detailed below.
 }
 
 \section*{\fontsize{12}{15}\selectfont Standards Based Grading}
-This course is graded by a methodology called {\bf standards based grading}.  Instead of receiving one percentage grade for an assessment, you will be assessed on whether or not you mastered individual {\bf learning standards}.  A list of these 25 standards is available in Sakai.  Your grade in the course will be based on how many of these standards you demonstrate mastery of.  {\bf On each standard, you will have the opportunity to earn up to two checkmarks; the total number of checkmarks you earn will determine your grade} (see below).
+This course is graded by a methodology called {\bf standards based grading}.  Instead of receiving one percentage grade for an assessment, you will be assessed on whether or not you mastered individual {\bf learning standards}.  A list of these 23 standards is available in Sakai.  Your grade in the course will be based on how many of these standards you demonstrate mastery of.  {\bf On each standard, you will have the opportunity to earn up to two checkmarks; the total number of checkmarks you earn will determine your grade} (see below).
  
 
 \subsection*{\fontsize{10}{12}\selectfont Feedback}
@@ -118,7 +118,7 @@ This course is graded by a methodology called {\bf standards based grading}.  In
 On a written assessment, you will not receive a score or a percentage.  There will be a list of the standards that were covered on that assessment, and a number or symbol next to each one.
 \begin{itemize}
 \item A {\bf M} means you successfully demonstrated {\bf Mastery} of that standard.  Great job!  Check off another box on your progress sheet.
-\item A {\bf *} means you have a minor mistake, unrelated to the standard being assessed.  For example, if you make a single arithmetic error while row reducing a matrix but do everything else correctly, you will earn a *.  If you receive a *, I won't give you any other feedback on that problem.  If you can determine your mistake on your own, and come explain it to me in my office hours and finish the problem correctly, then I will modify the * into a 1.  {\bf This must be done in the week following the assessment}.  After a week, the * will be treated the same as an R.
+\item A {\bf *} means you have a minor mistake, unrelated to the standard being assessed.  For example, if you make a single arithmetic error while row reducing a matrix but do everything else correctly, you will earn a *.  If you receive a *, I won't give you any other feedback on that problem.  If you can determine your mistake on your own, and come explain it to me in my office hours and finish the problem correctly, then I will modify the * into a M.  {\bf This must be done in the week following the assessment}.  After a week, the * will be treated the same as an R.
 \item A {\bf R} means you are eligible to {\bf Reassess} in my office hours.  You will earn this mark if you made a good faith attempt and demonstrated partial understanding, but did not demonstrate full mastery of that standard on this assessment.  You should work some more practice problems, and come by my office hours if you still do not understand.  You can either wait for the next quiz, or reassess during my office hours (see ``Reassessments'' below).
 \item A {\bf N} means there was {\bf No Significant Evidence} of understanding, and you are {\bf Not Eligible} for an office hours reassessment on this standard.  Your next attempt must come on an in-class assessment.  
 \end{itemize}
@@ -129,16 +129,17 @@ Unfortunately, this grading system is far too sophisticated for Sakai's gradeboo
 \subsection*{\fontsize{10}{12}\selectfont Reassessment}
 You will have multiple opportunities to demonstrate mastery of each standard.  Your first opportunity will be on one of the daily quizzes.  
 \begin{enumerate}[1)]
-\item Each standard will show up on quizzes for four consecutive weeks, beginning the class day after it is discussed in class (except, of course, standards that we cover in late November).  For example, standards that we cover on \ifbool{TR}{Tuesday, September 5th}{Wednesday, September 6} will appear on quizzes on the next four \ifbool{TR}{Thursdays}{Mondays}, \ifbool{TR}{September 7, 14, 21, and 28}{September 11, 18, 25, and October 3}.  A detailed schedule listing when each standard appears on quizzes is posted in Sakai.
-\item There will be a midterm in class on \ifbool{TR}{Tuesday, October 10}{Wednesday, October 11}, a semifinal assessment the last week of class, and the final exam.
+\item Each standard will show up on quizzes four times, beginning the class day after it is discussed in class (except, of course, standards that we cover in late November).  Usually these four appearances will be in subsequent weeks, but this is not a strict rule.  {\bf A detailed schedule listing when exactly which day each standard appears on quizzes is posted in Sakai.}
+\item There will be a midterm in class on \ifbool{TR}{Tuesday, October 10}{Wednesday, October 11}, a semifinal assessment the last week of class, and the final exam.  The midterm will be an opportunity to demonstrate mastery on any standard from the first three modules, while the semifinal and final exam will have every standard available.
 \item Additionally, if you receive an R on a standard, you can come to my office to reassess the standard.  There are a few caveats to office hour reassessments:
 \begin{itemize}
 \item In order to reassess a standard in my office, you must have completed additional practice problems and {\bf fill out a reassessment form} (blank forms are available in Sakai).
 \item \textbf{Office hour reassessments are given at the discretion of the instructor, they are not guaranteed opportunities. } 
 \item \textbf{You can only reassess one standard per day} (or perhaps two closely related standards that can be assessed by a single problem).
-%\item \textbf{There will be no office hours reassessments during the week of the midterm.}  I ask you to instead wait a few days and demonstrate mastery on the exam, so my office hour time during exam week can be devoted to answering questions helping everyone understand the new material.
+\item \textbf{There will be no office hours reassessments during the week of the midterm.}  I ask you to instead wait a few days and demonstrate mastery on the exam, so my office hour time during exam week can be devoted to answering questions helping everyone understand the new material.
 \item If you come in for help on a standard, you should come back at a later time to reassess it after you have practiced it some more on your own.  But you may certainly ask for help on one standard, and then demonstrate mastery of a different one during the same visit.
 \item \textbf{Reassessment opportunities may be limited by practical considerations like time limitations and fairness to your classmates, particularly towards the end of the semester.}  I do my best to accommodate everyone, but this is especially difficult at the end of the semester.  {\bf Students from previous semesters say the best thing you can do is to start reassessing early in the semester}.
+\ifbool{TR}{\item I will try to schedule extra office hours during finals week, but the last day for office hour reassessments will be Tuesday, December 5.  As with the midterm, I want to be sure my office hours the day before the final are available to answer any questions or clear up any last difficulties.}{}
 \item You can certainly demonstrate mastery of a standard for a second time in my office hours; however, to qualify it must occur in a subsequent week after you first mastered the standard.
 \end{itemize}
 \end{enumerate}
@@ -147,7 +148,13 @@ You will have multiple opportunities to demonstrate mastery of each standard.  Y
 
 
 \section*{\fontsize{12}{15}\selectfont Assessments}
-{\bf Each day we will have a quiz} in the last 15 minutes of class giving you opportunity to master several standards.  Note that you must have participated in class that day to be eligible to take the quiz.  There will also be a {\bf midterm exam on \ifbool{TR}{Tuesday, October 10}{Wednesday, October 11}}, and {\bf the final exam will be \ifbool{TR}{Thursday, December 7 at \ifbool{TBL}{10:30}{1:00}}{\ifbool{TBL}{Monday, December 4 at 6:00}{Wednesday, December 6 at 3:30}}}.
+There will be \ifbool{TBL}{four}{three} kinds of in class assessments:
+\begin{itemize}
+\ifbool{TBL}{\item As detailed above, there will be 6 iRATs and 6 tRATs; the dates for these are given above and listed in the assessment schedule in Sakai.}{}
+\item As mentioned above, {\bf each day we will have a quiz} in the last 15 minutes of class giving you opportunity to master several standards.  Note that you must have participated in class that day to be eligible to take the quiz.  A schedule listing which standards will appear on which quizzes is available in Sakai.
+\item There will be a {\bf midterm exam on \ifbool{TR}{Tuesday, October 10}{Wednesday, October 11}}.
+\item {\bf The final exam will be \ifbool{TR}{Thursday, December 7 at \ifbool{TBL}{10:30}{1:00}}{\ifbool{TBL}{Monday, December 4 at 6:00}{Wednesday, December 6 at 3:30}}}.
+\end{itemize}
 
 
 \begin{samepage}
@@ -159,7 +166,7 @@ To earn a letter grade of ... & ... you should at least \\
 \hline \\
 A & \begin{minipage}{0.7\textwidth}
 \begin{itemize}
-\item Obtain 45 mastery checkmarks;
+\item Obtain 40 mastery checkmarks;
 \item Complete 10 homework reports;
 \item \ifbool{TBL}{Have a 90\% Class Participation Score}{Have an 80\% attendence record.} \\
 \end{itemize} 
@@ -168,7 +175,7 @@ A & \begin{minipage}{0.7\textwidth}
 
 B & \begin{minipage}{0.7\textwidth}
 \begin{itemize}	
-\item Obtain 40 mastery checkmarks;
+\item Obtain 35 mastery checkmarks;
 \item Complete 8 homework reports;
 \item \ifbool{TBL}{Have a 80\% Class Participation Score}{Have an 80\% attendence record.} \\
 \end{itemize} 
@@ -177,7 +184,7 @@ B & \begin{minipage}{0.7\textwidth}
 
 C 	& \begin{minipage}{0.7\textwidth}
 \begin{itemize}	
-\item Obtain 35 mastery checkmarks;
+\item Obtain 30 mastery checkmarks;
 \item Complete 6 homework reports;
 \item \ifbool{TBL}{Have a 70\% Class Participation Score}{Have an 80\% attendence record.} \\
 \end{itemize} 
@@ -186,7 +193,7 @@ C 	& \begin{minipage}{0.7\textwidth}
 
 D 	&\begin{minipage}{0.7\textwidth}
 \begin{itemize}	
-\item Obtain 25 mastery checkmarks;
+\item Obtain 20 mastery checkmarks;
 \item Complete 4 homework reports;
 \item \ifbool{TBL}{Have a 50\% Class Participation Score}{Have a 50\% attendence record.} \\
 \end{itemize} 
@@ -218,7 +225,11 @@ The midterm and final exams can only be made up in the event of illness (with a 
 
 \section*{\fontsize{12}{15}\selectfont Calculator Policy}
 
-Calculators of any sort may be used on exams; a calculator that performs row reduction of matrices will be useful.  You will only receive credit on standards for which you show all your work, but if you have previously demonstrated mastery of a standard (e.g. row reduction) you may do that part on a calculator.  
+Calculators of any sort may be used on exams; a calculator that performs row reduction of matrices will be useful.  You will only receive credit on standards for which you show all your work, but if you have previously demonstrated mastery of a standard (e.g. row reduction) you may do that part on a calculator. 
+
+\section*{\fontsize{12}{15}\selectfont Student Academic Conduct Policy} 
+All students are expected to adhere to the Student Academic Conduct Policy, which you can view at
+{\tt http://www.southalabama.edu/bulletin/current/student-affairs/conduct.html}.  Students violating this policy will be penalized based on the severity of the offense in one of the following manners  1) Losing any mastery checkmarks on particular standards affected by the misconduct; 2) Reduction in final course grade by a letter grade; 3) Automatic course failure.
 
 
 
